--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Key Document</title>
+  <title>Key Lang</title>
   <link rel="stylesheet" href="/asset/global.css">
   <link rel="shortcut icon" href="/asset/favicon.svg" type="image/x-icon">
 </head>
 <body>
   <!-- 加载 -->
   <div id="loading">
-    <svg xmlns='http://www.w3.org/2000/svg' viewBox="0 0 64 64">
+    <svg id="loading-svg" xmlns='http://www.w3.org/2000/svg' viewBox="0 0 64 64">
       <defs>
         <linearGradient id="svg-linear-triangle" gradientTransform="rotate(30)">
           <stop offset="0%" stop-color="#799" />
@@ -22,7 +22,7 @@
         </linearGradient>
       </defs>
       <style>
-        #loading ellipse {
+        #loading-svg ellipse {
           fill: #000;
           opacity: 0.3;
           animation: loading-svg-ellipse 3s infinite;
@@ -33,7 +33,7 @@
           80%, 100% {opacity: 0.3;}
         }
         
-        #loading g {
+        #loading-svg g {
           stroke: url(#svg-linear-triangle);
           stroke-width: 4px;
           fill: none;
@@ -56,7 +56,7 @@
           }
         }
 
-        #loading circle {
+        #loading-svg circle {
           fill: url(#svg-linear-circle);
           animation: loading-svg-circle 3s infinite;
           transform-origin: 0 0;
@@ -94,20 +94,28 @@
   
   <!-- 页头 -->
   <header>
+    <ico id="header-back">&#xe83d;</ico>
     <img src="/asset/favicon.svg" alt="logo">
-    <h2>文档 - Key Languege</h2>
+    <h2>文档 - Key Lang</h2>
+    <but id="header-about"><ico>&#xe847;</ico>关于</but>
   </header>
   
    <!-- 内容 -->
   <main>
-    <nav>
-      <inner>
-      </inner>
-      <shadow>KEY</shadow>
-    </nav>
+    <nav></nav>
     <article></article>
   </main>
-  <script src="/asset//marked.min.js"></script>
+  <about style="transform: translateX(-200%);">
+    <bg></bg>
+    <svg-cont></svg-cont>
+    <h1>Key Lang</h1>
+    <p>To be the prettiest and simpliest script</p>
+    <links>
+      <a target="_blank" href="https://github.com/Bylx666/key-lang"><ico>&#xe682;</ico>Github</a>
+      <a target="_blank" href="https://space.bilibili.com/525849858"><ico>&#xe66d;</ico>Bilibili</a>
+    </links>
+  </about>
+  <script src="/asset/marked.min.js"></script>
   <script src="/asset/main.js"></script>
 </body>
 </html>
