feat: 换了一些icon trouble: const和take的存在是冲突的

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
     <ico id="header-back">&#xe83d;</ico>
     <img src="/asset/favicon.svg" alt="logo">
     <h2>文档 - Key Lang</h2>
-    <but id="header-about"><ico>&#xe847;</ico>关于</but>
+    <buts>
+      <but>语法</but>
+      <but>类型</but>
+      <but>关于</but>
+    </buts>
   </header>
   
    <!-- 内容 -->
@@ -109,7 +113,7 @@
     <bg></bg>
     <svg-cont></svg-cont>
     <h1>Key Lang</h1>
-    <p>To be the prettiest and simpliest script</p>
+    <p><ico>&#xe829;</ico>To be the prettiest and simpliest script</p>
     <links>
       <a target="_blank" href="https://github.com/Bylx666/key-lang"><ico>&#xe682;</ico>Github</a>
       <a target="_blank" href="https://space.bilibili.com/525849858"><ico>&#xe66d;</ico>Bilibili</a>
