feat: jmp按钮, 404页面 fix: loading和文章动画不同步的撕裂感

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <buts>
       <but>语法</but>
       <but>类型</but>
+      <but>开发</but>
       <but>关于</but>
     </buts>
   </header>
@@ -119,6 +120,14 @@
       <a target="_blank" href="https://space.bilibili.com/525849858"><ico>&#xe66d;</ico>Bilibili</a>
     </links>
   </about>
+
+  <!-- 404 -->
+  <article id="p404">
+    <h1>404</h1>
+    <p>似乎并没有该页面</p>
+    <div style="height: 100vh;"></div>
+    <h1>欢迎光临</h1>
+  </article>
   <script src="/asset/marked.min.js"></script>
   <script src="/asset/main.js"></script>
 </body>
