--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
   <link rel="shortcut icon" href="/asset/favicon.svg" type="image/x-icon">
 </head>
 <body>
-  <!-- 加载 -->
-  <div id="loading">
+  <!-- 页头 -->
+  <header>
+    <ico id="header-back">&#xe83d;</ico>
+    <img src="/asset/favicon.svg" alt="logo">
+    <h2>文档 - Key Lang</h2>
+    <buts>
+      <but>语法</but>
+      <but>类型</but>
+      <but>开发</but>
+      <but>关于</but>
+    </buts>
+  </header>
+  
+   <!-- 内容 -->
+  <main>
+    <nav></nav>
+    <article></article>
+  </main>
+
+  <!-- 关于 -->
+  <about style="transform: translateX(-200%);">
+    <bg></bg>
     <svg id="loading-svg" xmlns='http://www.w3.org/2000/svg' viewBox="0 0 64 64">
       <defs>
         <linearGradient id="svg-linear-triangle" gradientTransform="rotate(30)">
@@ -22,7 +42,7 @@
         </linearGradient>
       </defs>
       <style>
-        #loading-svg ellipse {
+        about ellipse {
           fill: #000;
           opacity: 0.3;
           animation: loading-svg-ellipse 3s infinite;
@@ -33,7 +53,7 @@
           80%, 100% {opacity: 0.3;}
         }
         
-        #loading-svg g {
+        about g {
           stroke: url(#svg-linear-triangle);
           stroke-width: 4px;
           fill: none;
@@ -56,7 +76,7 @@
           }
         }
 
-        #loading-svg circle {
+        about circle {
           fill: url(#svg-linear-circle);
           animation: loading-svg-circle 3s infinite;
           transform-origin: 0 0;
@@ -90,29 +110,6 @@
       <!-- 中心圆 -->
       <circle cx="32" cy="26.5" r="7"/>
     </svg>
-  </div>
-  
-  <!-- 页头 -->
-  <header>
-    <ico id="header-back">&#xe83d;</ico>
-    <img src="/asset/favicon.svg" alt="logo">
-    <h2>文档 - Key Lang</h2>
-    <buts>
-      <but>语法</but>
-      <but>类型</but>
-      <but>开发</but>
-      <but>关于</but>
-    </buts>
-  </header>
-  
-   <!-- 内容 -->
-  <main>
-    <nav></nav>
-    <article></article>
-  </main>
-  <about style="transform: translateX(-200%);">
-    <bg></bg>
-    <svg-cont></svg-cont>
     <h1>Key Lang</h1>
     <p><ico>&#xe829;</ico>To be the prettiest and simpliest script</p>
     <links>
