feat: native3篇文章 关闭延迟和加载特效

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
   <article id="p404">
     <h1>404</h1>
     <p>似乎并没有该页面</p>
-    <div style="height: 100vh;"></div>
-    <h1>欢迎光临</h1>
+    <p>
+      <img src="/asset/404.jpg" alt="404">
+    </p>
   </article>
   <script src="/asset/marked.min.js"></script>
   <script src="/asset/main.js"></script>
