feat: 语法高亮 feat: 一篇scope文章

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Key Lang</title>
   <link rel="stylesheet" href="/asset/global.css">
+  <link rel="stylesheet" href="/asset/prism-subkey.css">
   <link rel="shortcut icon" href="/asset/favicon.svg" type="image/x-icon">
 </head>
 <body>
@@ -127,6 +128,9 @@
     </p>
   </article>
   <script src="/asset/marked.min.js"></script>
+  <script src="/asset/prism-core.min.js"></script>
+  <script src="/asset/prism-rust.min.js"></script>
+  <script src="/asset/prism-ks.js"></script>
   <script src="/asset/main.js"></script>
 </body>
 </html>
