--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     <p>
       <img src="/asset/404.jpg" alt="404">
     </p>
+    <ret><d onclick="history.back()">返回</d><d onclick="rout.push('/');rout.go('/');">主页</d></ret>
   </article>
   <script src="/asset/marked.min.js"></script>
   <script src="/asset/prism-core.min.js"></script>
